--- a/demo/index.html
+++ b/demo/index.html
@@ -2,9 +2,9 @@
 <html>
 <head>
   <title></title>
-  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+  <!-- <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
-      rel="stylesheet">
+      rel="stylesheet"> -->
 
   <link rel="stylesheet" href="../dist/css/datepicker.css">
 
